Fix tooltip styling and visibility on search page

--- a/src/main/webapp/css/less/search-results.less
+++ b/src/main/webapp/css/less/search-results.less
@@ -75,7 +75,7 @@
     }
 
     li {
-        overflow:hidden; // clearfix
+        overflow:visible;
         position:relative;
         display:block;
         border-bottom:1px solid #ddd;
